--- a/webhook/etc/webhook-api.yaml
+++ b/webhook/etc/webhook-api.yaml
@@ -8,6 +8,15 @@ Port: 14001
 #   Port: 14000
 #   Path: /metrics
 
+Etcd:
+  Hosts:
+  - etcd1:2379
+  - etcd2:2379
+  - etcd3:2379
+  Key: 
+    Rest: /site/withoutauth/webhook/rest
+    Ws: /site/withoutauth/webhook/ws
+    SocketIO: /site/withoutauth/webhook/socketio
 
 DBUri: root:werido@tcp(8.131.78.84:3306)/simple_notification?charset=utf8mb4&parseTime=true
 Logger:
